test/files/type-resolver/errors/variable-input.otest
name = "Invalid variable type in function input"
line = 4
character = 17
error = 'Expected number for input "frequency", but received sequence order constant.'

---

test = sequence-forward

sine(frequency: test)

---

name = "Invalid variable type from outer scope in function input"
line = 5
character = 21
error = 'Expected number for input "frequency", but received string.'

---

test = "test"

func() = {
    sine(frequency: test)
}

---

name = "Invalid input type in function input"
line = 3
character = 21
error = 'Expected number for input "frequency", but received list of number.'

---

func(test: [ 1, 2, 3 ]) = {
    sine(frequency: test)
}
